# dns

./: README.md  krishy.dev.yaml  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
.run/: deploy.run.xml  dry-run.run.xml
config/: production.yaml
